--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- JUnit 5 -->
+	    <dependency>
+	        <groupId>org.junit.jupiter</groupId>
+	        <artifactId>junit-jupiter</artifactId>
+	        <version>5.10.2</version>
+	        <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	    	<groupId>com.100</groupId>
+	    	<artifactId>Billions</artifactId>
+	    	<version>0.0.1-SNAPSHOT</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
